    that introduced the issue.  (Closes: #863887)
  * dh_clean, dh_prep: Bulk delete most files and directories, which
    gives a noticable speed up for source packages building many
    binary packages.
  * dh_shlibdeps: Avoid creating debian/<pkg>/DEBIAN directory if it
    is not needed.
  * Dh_Lib.pm: Fix typo in error message.
  * Dh_Lib.pm: Rewrite install_* to use File::Copy to avoid the
    overhead of a fork+exec per file.
  * Dh_Lib.pm: Replace most of the fork+exec calls to mv for simple
    file renames.
  * Dh_Lib.pm: Add sub to make common dh_* tools do their thing in
    parallel with very little coding effort.  This parallel support
    accounts for DEB_BUILD_OPTIONS to set the upper limit.
  * dh_fixperms: Run package updates in parallel if DEB_BUILD_OPTIONS
    permits it.
  * dh_installchangelogs: Ditto.
  * dh_compress: Ditto.
  * dh_installman: Ditto.
  * dh_genchanges: Ditto.
  * dh_shlibdeps: Ditto.
  * dh_builddeb: Rewrite the hand-written parallel code to use the new
    simplier way of doing it.
  * dh_shlibdeps: Avoid calling file(1) on debug symbols.
  * SUPPORT-POLICY: Include new document that describes the current
    support policy of debhelper compat levels.
  * Dh_Lib.pm: Pass ":unix" layer when using the ":gzip" layer due to
    PerlIO-gzip bug RT#114557.
  * Dh_Lib.pm: Ignore empty dpkg-architecture variables.
    (Closes: #862844)
  * dh_installchangelogs: Avoid trying to install a directory by default
    as a changelog file.  Thanks to Markus Koschany for reporting the
    issue.  (Closes: #861852)
  * dh_installwm.1: Correct documentation to reflect the behaviour in
    compat 10.  Thanks to Robert Luberda for reporting the issue.
    (Closes: #865708)
  * dh_installcatalogs: Use explicit await triggers to avoid trigger
    a lintian warning.
  * dh_installman: In compat 11, attempt to detect the language of the
    manpage based on the directory (/man/<LANG>/manX/) before using the